Add `@ExpectedToFail` test extension (#551 / #676)
As opposed to JUnit Jupiter's `@Disabled` annotation, this extension
executes the annotated test and then effectively flips the result:

* failed ~> ignored
* passed ~> failed

This ensures that a temporarily disabled test will get discovered
once the reason for being disabled no longer holds, so it can/must
be re-enabled by removing `@ExpectedToFail`.

PR: #676

--- a/docs/docs-nav.yml
+++ b/docs/docs-nav.yml
@@ -16,6 +16,8 @@
         url: /docs/disable-if-test-fails/
       - title: "Disable Parameterized Tests"
         url: /docs/disable-parameterized-tests/
+      - title: "Expected-to-Fail Tests"
+        url: /docs/expected-to-fail-tests/
       - title: "Issue information"
         url: /docs/issue/
       - title: "JSON Argument Source"
