Add restore annotations for system properties and environment variables (#574 / #700)
To allow users to modify environment variables and system properties
directly in their test code, outside of the existing clear and set
annotations, this PR  introduces `RestoreEnvironmentVariables` and
`RestoreSystemProperties` to revert these resources to their pre-test state.

Closes: #574
PR: #700

--- a/docs/docs-nav.yml
+++ b/docs/docs-nav.yml
@@ -5,9 +5,9 @@
     children:
       - title: "Cartesian Product of Parameters"
         url: /docs/cartesian-product/
-      - title: "Clearing or Setting System Properties"
+      - title: "Clear, Set, and Restore System Properties"
         url: /docs/system-properties/
-      - title: "Clearing or Setting Environment Variables"
+      - title: "Clear, Set, and Restore Environment Variables"
         url: /docs/environment-variables/
       - title: "Default Locale and TimeZone"
         url: /docs/default-locale-timezone/
