--- a/docs/docs-nav.yml
+++ b/docs/docs-nav.yml
@@ -9,6 +9,8 @@
         url: /docs/system-properties/
       - title: "Clear, Set, and Restore Environment Variables"
         url: /docs/environment-variables/
+      - title: "Convert Number Argument to Byte Array"
+        url: /docs/byte-array-converter/
       - title: "Default Locale and TimeZone"
         url: /docs/default-locale-timezone/
       - title: "Disable a Test Temporarily"
