Add simple aggregator (#745 / #744)
Add argument aggregator for simple use-cases.

Closes: #745
PR: #744

--- a/docs/docs-nav.yml
+++ b/docs/docs-nav.yml
@@ -39,5 +39,7 @@
         url: /docs/retrying-test/
       - title: "Standard Input and Output"
         url: /docs/standard-input-output/
+      - title: "Simple Arguments Aggregator"
+        url: /docs/simple-arguments-aggregator/
       - title: "Vintage @Test"
         url: /docs/vintage-test/
