Replace markdown with AsciiDoc (#656 / #763)
GitHub now supports AsciiDoc, so it makes sense to migrate
to that as it has some features that Markdown does not.

Closes: #656
PR: #763

--- a/src/test/resources/junit-platform.properties
+++ b/src/test/resources/junit-platform.properties
@@ -1,4 +1,4 @@
-# see section "Thread-safety" in CONTRIBUTING.md
+# see section "Thread-safety" in CONTRIBUTING.adoc
 junit.jupiter.execution.parallel.enabled=true
 junit.jupiter.execution.parallel.mode.default=concurrent
 junit.jupiter.execution.parallel.mode.classes.default=same_thread
